objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>AD_Hours__c</fullName>
        <inlineHelpText>total hours logged by anne dunbar on this site/project</inlineHelpText>
        <label>AD Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AHJ_Comments_Received__c</fullName>
        <description>Date that first planset comments are received from AHJ.</description>
        <inlineHelpText>Date that first planset comments are received from AHJ.</inlineHelpText>
        <label>AHJ Comments Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AHJ_Re_submission__c</fullName>
        <description>Date that revised IFP drawings are completed and submitted to AHJ</description>
        <inlineHelpText>Date that revised IFP drawings are completed and submitted to AHJ after 1st round of comments</inlineHelpText>
        <label>AHJ Re-submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AHJ_Submission__c</fullName>
        <description>Date that CD IFP Drawings are physically submitted the AHJ for permit review.</description>
        <inlineHelpText>Date that CD IFP Drawings are physically submitted the AHJ for permit review.</inlineHelpText>
        <label>AHJ Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Project__r.AcctSeed__Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Project__r.AcctSeed__Account__r.Name</formula>
        <inlineHelpText>pulls over Account Name from related project</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acreage__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Acreage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Budget__c</fullName>
        <description>pulls active budget from related project, used mostly for reporting/snapshots</description>
        <formula>Project__r.Active_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls active budget from related project, used mostly for reporting/snapshots</inlineHelpText>
        <label>Active Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Margin__c</fullName>
        <description>pulls the margin-active from the related project, used mostly with reporting/snapshots</description>
        <formula>Project__r.Margin_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the margin-active from the related project, used mostly with reporting/snapshots</inlineHelpText>
        <label>Active Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active_Project_Portfolio_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked, the project will show up on the Active Project Portfolio Dashboard if it has not yet reached 7C or kickoff</description>
        <inlineHelpText>When this box is checked, the project will show up on the Active Project Portfolio Dashboard if it has not yet reached 7C or kickoff</inlineHelpText>
        <label>Active Project Portfolio View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Payment__c</fullName>
        <label>Annual Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applications_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applications Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apr_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Apr Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Apr Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Access__c</fullName>
        <inlineHelpText>if keys are not needed, explain how to access the site.  if it’s a secured location provide details on how we access equipment</inlineHelpText>
        <label>Array Access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>As_Built_Completed__c</fullName>
        <inlineHelpText>Actual Date of As-Built Released</inlineHelpText>
        <label>As-Built Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Built_PDF_Link__c</fullName>
        <label>As Built PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>As_Built_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents multiple Production Models being created by Process that fires off Design Stage - As Built</description>
        <label>As Built Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_FNTP__c</fullName>
        <label>Associated FNTP Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Final_Completion__c</fullName>
        <label>Associated Final Completion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Mechanical_completion_date__c</fullName>
        <label>Associated Mechanical completion date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Milestone__c</fullName>
        <label>Associated Milestone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_PTO_date__c</fullName>
        <label>Associated PTO date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated__c</fullName>
        <label>Associated Substantial completion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_mobilization_date__c</fullName>
        <label>Associated mobilization date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_RiskFC__c</fullName>
        <label>At_RiskFC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_RiskFNTP__c</fullName>
        <label>At_RiskFNTP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_RiskMCD__c</fullName>
        <label>At_RiskMCD</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_RiskMD__c</fullName>
        <label>At_RiskMD</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_RiskPTO__c</fullName>
        <label>At_RiskPTO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <label>At Risk</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Aug Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Aug Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Area__c</fullName>
        <inlineHelpText>Available Area of the Site in Acres or Available sq. ft if a Rooftop Project</inlineHelpText>
        <label>Available Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_PKO__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Project__r.Project_Kickoff_Date__c)), Project__r.Project_Kickoff_Date__c, 
IF( 
AND( 
ISBLANK(Project__r.Project_Kickoff_Date__c), 
Project_Awarded__c = TRUE), DATEVALUE( CreatedDate ), NULL ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded PKO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Awarded_PTO_Forecast__c</fullName>
        <description>This field is currently used to identify Awarded Projects for the &apos;PM Slot Plan - Awarded - West&apos; Calendar. If PTO is blank, it populates a future date to allow the Site to display on the calendar</description>
        <formula>IF( 
NOT(ISBLANK(PTO_Date__c)), PTO_Date__c, 
IF( 
AND( 
ISBLANK(PTO_Date__c), 
ISPICKVAL( Opportunity__r.StageName, &quot;Project Awarded&quot; ) 
), DATEVALUE( CreatedDate ), TODAY () + 180 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded PTO Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuildingPermitObtainedDate__c</fullName>
        <inlineHelpText>Date Building Permit Obtained</inlineHelpText>
        <label>Building Permit Obtained Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDIFR_to_MOB__c</fullName>
        <formula>Mobilization_Date__c - CD_Forecast_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDIFR to MOB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Forecast_Release_Date__c</fullName>
        <inlineHelpText>Forecasted Date of Construction Set Release- ISSUED FOR REVIEW</inlineHelpText>
        <label>CD IFR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Release_Date__c</fullName>
        <inlineHelpText>Construction Set Release Date - ISSUED FOR CONSTRUCTION</inlineHelpText>
        <label>CD IFC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Set_PDF_Link__c</fullName>
        <inlineHelpText>Link to CD Set- ISSUED FOR CONSTRUCTION</inlineHelpText>
        <label>CD IFC Set PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CD_IFP_Date__c</fullName>
        <description>Release date of CD Issued For Permit Set.</description>
        <inlineHelpText>Release date of CD Issued For Permit Set.</inlineHelpText>
        <label>CD IFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFR_to_Mob_Site__c</fullName>
        <description>Used as label for calendar anywhere entry</description>
        <formula>Name &amp; &quot;: CD IFR to Mob&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD IFR to Mob + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Set_PDF_Link__c</fullName>
        <inlineHelpText>Link to CD set pdf- ISSUED FOR REVIEW</inlineHelpText>
        <label>CD IFR Set PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CE_LT_Goal__c</fullName>
        <description>Displays Civil Lead Time goal based on project branch, used in reporting</description>
        <formula>IF((Project_Branch__c) = &quot;Boston&quot;, &quot;55&quot;, IF((Project_Branch__c)= &quot;Mid Atlantic&quot;, &quot;65&quot;, null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Civil Lead Time goal based on project branch, used in reporting</inlineHelpText>
        <label>CE LT Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Start_to_Entitlement__c</fullName>
        <description># of days between Civil Start and Entitlement</description>
        <formula>Entitlement_Approval_Actual__c -  Civil_Engineering_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of days between Civil Start and Entitlement</inlineHelpText>
        <label>CE Start to Entitlement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Date_Stamp__c</fullName>
        <label>CS Date Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Test_Complete_Date__c</fullName>
        <description>Date Capacity test Complete &amp; Submitted</description>
        <inlineHelpText>Date Capacity test Complete &amp; Submitted</inlineHelpText>
        <label>Capacity Test Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_Test_Protocol__c</fullName>
        <description>SPG update to show test format.</description>
        <inlineHelpText>SPG update to show test format.</inlineHelpText>
        <label>Capacity Test Protocol</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capacity_Test_Report_Link__c</fullName>
        <description>Provide Salesforce/Box link to Test Report</description>
        <inlineHelpText>Provide Salesforce/Box link to Test Report</inlineHelpText>
        <label>Capacity Test Report Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Capacity_Test_Required__c</fullName>
        <description>Verify with PM contractual requirement used for O&amp;M</description>
        <inlineHelpText>Verify with PM contractual requirement.</inlineHelpText>
        <label>Capacity Test Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_Test_Start_Date__c</fullName>
        <description>Date SPG Began Test Process</description>
        <inlineHelpText>Date SPG Began Test Process</inlineHelpText>
        <label>Capacity Test Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capacity_Test_Status__c</fullName>
        <description>Updated by SPG</description>
        <inlineHelpText>Updated by SPG</inlineHelpText>
        <label>Capacity Test Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Pending Internal Documentation</fullName>
                </value>
                <value>
                    <fullName>Pending Client Documentation</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete and Submitted to Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capactiy_Test_Notes_Result__c</fullName>
        <description>Most Recent Test Status</description>
        <inlineHelpText>Most Recent Test Status</inlineHelpText>
        <label>Capactiy Test Notes &amp; Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cell_Carrier__c</fullName>
        <label>Cell Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Metro PCS</fullName>
                </value>
                <value>
                    <fullName>T Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone_Modem__c</fullName>
        <label>Cell Phone Modem #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <inlineHelpText>Use this field to show the status of the Project Control checklist.</inlineHelpText>
        <label>Checklist Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Premobilization Checklist has open items</fullName>
                </value>
                <value>
                    <fullName>In Progress Audit has occurred</fullName>
                </value>
                <value>
                    <fullName>Closeout Checklist has open items</fullName>
                </value>
                <value>
                    <fullName>Closeout Checklist Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Civil_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned Civil Principal Engineer</inlineHelpText>
        <label>Internal Civil PE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civil_Engineering_Start_Date__c</fullName>
        <description>Date Civil begins working on project</description>
        <inlineHelpText>Please enter the date  the Civil  Eng begins working on the project</inlineHelpText>
        <label>Civil Engineering Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Civil_Management_Notes__c</fullName>
        <inlineHelpText>Template:
Slope analysis 1 days
Layout 1 days
Delineation
Survey 7 days
Layout 3 days
Send to civil sub 3 days
Borrego review 4 weeks
Submittal date 3 days</inlineHelpText>
        <label>Civil Management Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closeout_Document__c</fullName>
        <inlineHelpText>Link to Closeout Documentation- for Customer Portal</inlineHelpText>
        <label>System Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Combo_Lock__c</fullName>
        <label>Combo Lock #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Schedule__c</fullName>
        <inlineHelpText>Historical comments on schedule</inlineHelpText>
        <label>Comments on Schedule</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commissioning_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact who commissioned the system</inlineHelpText>
        <label>Commissioning Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <inlineHelpText>Date of system Commissioning</inlineHelpText>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status_Notes__c</fullName>
        <label>Commissioning Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status__c</fullName>
        <label>Pre-Operational Commissioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted to QA</fullName>
                </value>
                <value>
                    <fullName>First Stage Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Corrective Action Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Site_Discovery_Date__c</fullName>
        <inlineHelpText>Date site discovery is completed- forecasted until actual</inlineHelpText>
        <label>Complete Site Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_By_Borrego__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>who updated this information from Borrego</inlineHelpText>
        <label>Completed By - Borrego</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SitesOMSiteInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_by_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>which customer provided the site information</inlineHelpText>
        <label>Completed by - Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites (Completed by - Customer)</relationshipLabel>
        <relationshipName>OMSiteInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletefromProject__c</fullName>
        <formula>Project__r.Percent_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete from Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cons_Stage_90_Completed_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cons Stage 90% Completed Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Const_Stage_Date_Stamp__c</fullName>
        <label>Const Stage Date Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <inlineHelpText>Construction Stage of the Project- Controlled by the PM</inlineHelpText>
        <label>Construction Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Locked</fullName>
                </value>
                <value>
                    <fullName>Subcontractors Selected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Work 90% Completed</fullName>
                </value>
                <value>
                    <fullName>Inspection Pending</fullName>
                </value>
                <value>
                    <fullName>Inspections Complete</fullName>
                </value>
                <value>
                    <fullName>Cust. Accept. Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Record__c</fullName>
        <description>used to be able to count # of sites on other related objects</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to be able to count # of sites on other related objects</inlineHelpText>
        <label>Count of Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Option_Period_Expiration_Date__c</fullName>
        <description>This field should be mandatory at the stage Option Lease Executed, going forward based on opportunity close dates in the future</description>
        <inlineHelpText>Mandatory at the stage &apos;Option Lease Executed.&apos; If the lease has commenced, this date will be ignored.</inlineHelpText>
        <label>Current Option Period Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Connection_to_Internet__c</fullName>
        <label>DAS Connection to Internet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Modem</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAS_Login_Notes__c</fullName>
        <description>Used by SPG group to QA DAS platform on new projects.</description>
        <inlineHelpText>Used by SPG group to QA DAS platform on new projects.</inlineHelpText>
        <label>DAS Login Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DAS_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAS Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OM Provider</relationshipLabel>
        <relationshipName>OM_Provider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DE_LT_Goal__c</fullName>
        <description>SDE Lead Time goal. Used in reporting</description>
        <inlineHelpText>SDE Lead Time goal. Used in reporting</inlineHelpText>
        <label>DE LT Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_Start_to_50__c</fullName>
        <description>Formula field that calculates difference between Dev Eng Start Date field and 50% Set field</description>
        <formula>X50_Forecast_Release_Date__c -  Development_Engineering_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that calculates difference between Dev Eng Start Date field and 50% Set field</inlineHelpText>
        <label>DE Start to 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Change_Explanation__c</fullName>
        <inlineHelpText>Explanation as to why the Mobilization Date, PTO Date, or Deadline Date was changed. Required when changing any of these dates.</inlineHelpText>
        <label>Date Change Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_SPG_DAS_Status_100__c</fullName>
        <description>Captures the date when the status of the SPG DAS QA field changes to 100% Complete</description>
        <inlineHelpText>Captures the date when the status of the SPG DAS QA field changes to 100% Complete</inlineHelpText>
        <label>Date SPG DAS Status 100%</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <inlineHelpText>Are there any deadlines in the contract? Specify any deadline dates here.</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Description__c</fullName>
        <inlineHelpText>Description of the deadline date: What entity is the deadline for and what happens after that date?
Required when there is a deadline date filled in.</inlineHelpText>
        <label>Deadline Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dec_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Dec Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Dec Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <inlineHelpText>Notes regarding the delivery of equipment.</inlineHelpText>
        <label>Delivery Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Notes__c</fullName>
        <inlineHelpText>Historical design notes</inlineHelpText>
        <label>Dev Eng Project Status Notes History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Stage__c</fullName>
        <inlineHelpText>Current set the Engineering team is working on. Defaults to New upon creation of a Site.</inlineHelpText>
        <label>Design Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Site Use Permit Set</fullName>
                </value>
                <value>
                    <fullName>50% Set</fullName>
                </value>
                <value>
                    <fullName>CD IFR</fullName>
                </value>
                <value>
                    <fullName>CD IFC</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_Manager_Logged_In__c</fullName>
        <description>assigns value of 1 if the manager of the Dev SDE listed on site is logged in, used mostly for reporting and filtering of list views, should not be on layouts</description>
        <formula>IF(

 Development_SDE__r.ManagerId  = $User.Id , 1 ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>assigns value of 1 if the manager of the Dev SDE listed on site is logged in, used mostly for reporting and filtering of list views, should not be on layouts</inlineHelpText>
        <label>Dev Manager Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_SDE_Total_Hours__c</fullName>
        <description>used in conjunction with roll up helper</description>
        <inlineHelpText>rolls us hours from time card lines where Dev SDE listed on site matches employee on associated time card</inlineHelpText>
        <label>Dev SDE Total Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_DE1_Drafter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Development Eningeer - DE1 - Drafter working on the project</description>
        <inlineHelpText>Populate, if applicable</inlineHelpText>
        <label>Development DE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SitesxOkI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Engineering_Start_Date__c</fullName>
        <inlineHelpText>Date Development Engineering starts working on the project</inlineHelpText>
        <label>Bid Set Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Development Engineering - Senior Design Engineer working on project</inlineHelpText>
        <label>Development Lead SDE/DE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SitesxOk3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <formula>Project__r.Direct_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>